# ads_exercise

./: .gitignore  README.md  _tasks.py  calculate_final_grades.ipynb  calculate_score.ipynb  clean_notebooks.ipynb  clean_repos.ipynb  extract_roster_from_studon.ipynb  pyproject.toml  release_assignment.sh  wrong_filename.ipynb
_bpos_exercise/: calculate_final_grades.ipynb  calculate_score.ipynb
ads_excercise/: nbgrader_config.py
assignment_template/: ads_assignment_XX.ipynb
assignment_template/.github/workflows/: github-actions.yml
course-directory/: config.yml
course-directory/ads_excercise/: __init__.py  gradebook.db  test1.ipynb
course_directory/: classroom_roster.csv  classroom_roster_update.csv  config.yml
course_directory/ads_exercise/: gradebook.db  grades.csv  nbgrader_config.py
course_directory/ads_exercise/final_grades/: 01_grades.csv  02_grades.csv  04_1_grades.csv  04_grades.csv  05_grades.csv  06_grades.csv  09_grades.csv
course_directory/ads_exercise/final_grades/SoSe23/: 03_grades.csv  08_grades.csv
course_directory/ads_exercise/final_grades/SoSe24/: 3grades.csv  gradebook.db  grades_final_manual.csv
course_directory/ads_exercise/final_grades/SoSe25/: grades.csv  grades_manual.csv
course_directory/ads_exercise/release/0-setup/: 0-setup.ipynb  0_setup.ipynb
course_directory/ads_exercise/release/04_python_basics_III/: 04_python_basics_III.ipynb
course_directory/ads_exercise/release/05_dicts_classes/: 05_dicts_classes.ipynb
course_directory/ads_exercise/release/06_numpy_scipy/: 06_numpy_scipy.ipynb
course_directory/ads_exercise/release/07_pandas/: 07_pandas.ipynb
course_directory/ads_exercise/release/08_statistics/: 08_statistics.ipynb
course_directory/ads_exercise/release/09-visualization/: 09_visualization.ipynb
course_directory/ads_exercise/release/09_visualization/: 09_visualization.ipynb
course_directory/ads_exercise/release/1-python-basics-I/: 1_python_basics_I.ipynb
course_directory/ads_exercise/release/10-ml/: 10_machine_learning.ipynb
course_directory/ads_exercise/release/2-python-basics-II/: 2_python_basics_II.ipynb
course_directory/ads_exercise/release/3-control-flow/: 3_control_flow.ipynb
course_directory/ads_exercise/release/4-dicts-classes/: 4_dicts_classes.ipynb
course_directory/ads_exercise/release/5-numpy-scipy/: 5_numpy_scipy.ipynb
course_directory/ads_exercise/release/6-pandas/: 6_pandas.ipynb
course_directory/ads_exercise/release/7-statistics/: 7_statistics.ipynb
course_directory/ads_exercise/release/8-visualization/: 8_visualization.ipynb
course_directory/ads_exercise/release/9-ml/: 9_ml.ipynb
course_directory/ads_exercise/release/ads_assignment_1/: ads_assignment_1.ipynb
course_directory/ads_exercise/release/ads_assignment_2/: ads_assignment_2.ipynb
course_directory/ads_exercise/release/ads_assignment_3/: ads_assignment_3.ipynb
course_directory/ads_exercise/release/python_basics_3/: python_basics_3.ipynb
course_directory/ads_exercise/source/: header.ipynb
course_directory/ads_exercise/source/0-setup/: 0-setup.ipynb  0_setup.ipynb
course_directory/ads_exercise/source/04_python_basics_III/: 04_python_basics_III.ipynb
course_directory/classroom_roster_test/: classroom_roster.csv
course_directory/extra_files/: README.md  readme.md
student_roster/: SoSe_23-20230411-140200  SoSe_23-20230417-091121  SoSe_24-20240412-134141  SoSe_24-20240419-155002  SoSe_25-20250428-111740
student_roster/updates/: SoSe_24-20240419-155301
studon_export/: 2023_04_11_13-341681212893_member_export_6887529.csv  2023_04_17_09-091681715388_member_export_6887529.csv  2023_04_24_10-061682323573_member_export_6887529.csv  2024_04_12_13-391712921986_member_export_7692618.csv  2024_04_15_10-011713168067_member_export_7692618.csv  2025_04_28_11-141745831666_member_export_8679888.csv
studon_export/mails/: mails.csv  mails2024.csv
total_score/: 2023_total.csv  2024_after_6.csv  2024_after_8.csv  2024_final.csv  2025_after_2.csv  2025_final.csv  2025_score_after_2.csv  2025_score_detailed.csv  SoSe_23-20230516-170600.csv  SoSe_23-20230807-104628.csv  SoSe_23-20230815-104513.csv  SoSe_24-20240626-135058.csv  SoSe_24-20240708-135059.csv  SoSe_24-20240722-131621.csv  SoSe_25-20250807-155728.csv  SoSe_25-20250811-155628.csv  SoSe_25-20250812-103022.csv  SoSe_25-20250820-153817.csv
util_scripts/: clean_repos.ipynb  repos_to_delete.csv
(+33 files in other folders)
