[project]
name = "ads_exercise"
version = "0.1.0"
description = ""
authors = [
    { name = "Luca Abel", email = "luca.abel@fau.de" },
    { name = "Marie Oesten", email = "marie.oesten@fau.de" },
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "abc-classroom>=0.1.9,<0.2",
    "nbgrader==0.8.1",
    "numpy==2.3.2",
    "biopsykit==0.13.1",
    "pathlib",
    "scipy>=1.13.0,<2",
    "pooch>=1.8.1,<2",
]

[dependency-groups]
dev = [
    "ipympl>=0.9,<0.10",
    "poethepoet>=0.10.0,<0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "src/**"
]

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.poe.tasks]
_format_black = "black ."
_format_isort = "isort ."
format = { sequence = ["_format_black", "_format_isort"], help = "Format all files." }
lint = { cmd = "prospector", help = "Lint all files with Prospector." }
_check_black = "black . --check"
_check_isort = "isort . --check"
check = { sequence = ["_check_black", "_check_isort", "lint"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=ads_exercise --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
version = { script = "_tasks:task_update_version()" }
conf_jupyter = { cmd = "python -m ipykernel install --user --name ads_exercise", help = "Add a new jupyter kernel for the project." }
register_ipykernel = { cmd = "python -m ipykernel install --user --name ads_exercise --display-name ads_exercise", help = "Add a new jupyter kernel for the project."}
remove_jupyter = { cmd = "jupyter kernelspec uninstall ads_exercise", help = "Remove the project specific jupyter kernel."}
experiment = { script = "_tasks:task_new_experiment()", help = "Create the boilerplate for a new experiment in the experiment subfolder."}
